<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SummonerProfileActivity">

    <LinearLayout
        android:id="@+id/summonerProfileView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:visibility="gone"

        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="@dimen/cardview_default_elevation"
            app:cardCornerRadius="4dp"
            app:cardUseCompatPadding="false"
            app:cardBackgroundColor="#37474f">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">
                    <com.mikhaellopez.circularimageview.CircularImageView
                        android:id="@+id/profileIcon"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        app:civ_border="false"
                        />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginLeft="20dp">
                        <TextView
                            android:id="@+id/summonerNameText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-black"
                            android:textSize="32dp"/>

                        <TextView
                            android:id="@+id/summonerLevelText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:textSize="18dp"
                            />
                    </LinearLayout>
                </LinearLayout>

                <Button
                    android:id="@+id/summonerFollowButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="Follow"
                    android:onClick="follow"/>

                <Button
                    android:id="@+id/summonerLastMatchButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="View last match"
                    android:onClick="matchHistory"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="@dimen/cardview_default_elevation"
            app:cardCornerRadius="4dp"
            app:cardUseCompatPadding="false"
            app:cardBackgroundColor="#37474f"
            android:layout_marginTop="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="20dp"
                android:gravity="center_horizontal">
                <TextView
                    android:id="@+id/recommendedChampExplanationText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18dp"
                    />

                <com.mikhaellopez.circularimageview.CircularImageView
                    android:id="@+id/champIcon"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_marginTop="20dp"
                    app:civ_border="false"
                    />

                <TextView
                    android:id="@+id/recommendedChampText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="sans-serif-black"
                    android:textSize="32dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/summonerProfileSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/summonerErrorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>