<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="12dp"
    android:paddingBottom="12dp"
    android:paddingLeft="15dp"
    android:paddingRight="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:baselineAligned="false">

        <TextView
            android:id="@+id/matchHistoryHeaderText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:textSize="22sp"
            android:layout_weight="2"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="KDA"
            android:layout_weight="1"
            android:textAlignment="center"
            android:gravity="center" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Damage dealt"
            android:layout_weight="1"
            android:textAlignment="center"
            android:gravity="center" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Gold earned"
            android:layout_weight="1"
            android:textAlignment="center"
            android:gravity="center" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>